--- a/RandomForest/Decision Tree and Random Forests.ipynb
+++ b/RandomForest/Decision Tree and Random Forests.ipynb
@@ -573,10 +573,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Decision Trees\n",
+    "#classification model, regression, supervised learning\n",
+    "#not a lot of data preparation needed\n",
+    "#can work for categorical data as well as numerical data\n",
+    "#Ensemble model of multiple decision trees\n",
+    "#takes random subsets of the given data and applies decision tree to it\n",
+    "#random subsets create bias, but the Random Forest algorithm applies an average weight to each decision tree\n",
+    "#parameters include num of trees to use, and max_features per node"
+   ]
   },
   {
    "cell_type": "code",
